--- a/sprint4/salabytest/app/views/static_pages/index.html.erb
+++ b/sprint4/salabytest/app/views/static_pages/index.html.erb
@@ -5,9 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foundation | Welcome</title>
-  <link rel="stylesheet" href="css/foundation.css" />
-  <link rel="stylesheet" href="css/introStyle.css" />
-  <script src="js/vendor/modernizr.js"></script>
+  <link rel="stylesheet" href="assets/index/introStyle.css" />
 </head>
 
 <body>
