lagt til bilder på RLE

--- a/sprint4/salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/sprint4/salabytest/app/views/static_pages/barn/rle.html.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forside Barn</title>
   <link rel="stylesheet" href="css/foundation.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/stylesheet/css/bar.css" />
   <style>
       body {
           background: url("img/rlebakgrunn.jpg") no-repeat;
@@ -24,7 +24,7 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <a href="./barnForside.html"><img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo"></a>
+        <a href="./barnForside.html"><img id="siteLogo" src="/assets/barn/logos/salaby_logo_enkel_rød.png" alt="logo"></a>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
@@ -50,7 +50,7 @@
     <img src="./img/RLE/logo_liten.png" alt="logo">
   </div>
   <div class="large-3 medium-6 small-6 columns">
-    <a href="./barnForside.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
+    <a href="./barnForside.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake">
     </a>
 
   </div>
@@ -66,50 +66,50 @@
   <div class="row">
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <a href="hinduisme.html"><img src="img/RLE/hinduisme.png" alt="Hinduismebilde">
+        <a href="hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" alt="Hinduismebilde">
         </a>
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/islam.png" alt="Islambilde">
+        <img src="/assets/barn/RLE/islam.png" alt="Islambilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/kristendom.png" alt="Kristendombilde">
+        <img src="/assets/barn/RLE/kristendom.png" alt="Kristendombilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
 
       <div id="align_center" class="align-center">
-        <img src="img/RLE/jøde.png" alt="Jødedommenbilde">
+        <img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde">
       </div>
 
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/budd.png" alt="Buddhismebilde">
+        <img src="/assets/barn/RLE/budd.png" alt="Buddhismebilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/sikhisme.png" alt="Sikhismebilde">
+        <img src="/assets/barn/RLE/sikhisme.png" alt="Sikhismebilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/etikk.png" alt="Etikkbilde">
+        <img src="/assets/barn/RLE/etikk.png" alt="Etikkbilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/kirke.png" alt="Kirkebilde">
+        <img src="/assets/barn/RLE/kirke.png" alt="Kirkebilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
       <div id="align_center" class="align-center">
-        <img src="img/RLE/kunst2.png" alt="Kunstbilde">
+        <img src="/assets/barn/RLE/kunst2.png" alt="Kunstbilde">
       </div>
     </div>
     <div class="large-3"></div>
@@ -122,7 +122,7 @@
   <div class="row">
     <div class="large-4 columns">
       <div id="footerLogo">
-        <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
+        <img src="/assets/barn/logos/salaby_logo_enkel_grå.png" alt="logo">
       </div>
     </div>
 
@@ -142,10 +142,10 @@
     <div class="large-2 columns">
       <div id="socialLinks">
         <a href="https://www.facebook.com/salaby">
-          <img src="img/social/facebook_logo.png" alt="Facebooklogo">
+          <img src="/assets/barn/social/Facebook_logo.png" alt="Facebooklogo">
         </a>
         <a href="https://www.youtube.com/user/SalabyGyldendal">
-          <img src="img/social/youtube_logo.png" alt="Youtubelogo">
+          <img src="/assets/barn/social/youtube_logo.png" alt="Youtubelogo">
         </a>
       </div>
     </div>
