--- a/Salabytest/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/Salabytest/app/assets/stylesheets/foundation_and_overrides.scss
@@ -55,7 +55,7 @@
 // $rem-base: 16px;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
-@import "foundation/_functions";
+@import "foundation/functions";
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
@@ -486,7 +486,7 @@ $include-html-global-classes: $include-html-classes;
 // $clearing-bg: $oil;
 // $clearing-caption-bg: $clearing-bg;
 // $clearing-carousel-bg: rgba(51,51,51,0.8);
-// $clearing-images-bg: $clearing-bg;
+// $clearing-img-bg: $clearing-bg;
 
 // We use these to style the close button
 // $clearing-close-color: $iron;
@@ -502,7 +502,7 @@ $include-html-global-classes: $include-html-classes;
 // $clearing-caption-padding: 10px 30px 20px;
 
 // We use these to make the image and carousel height and style
-// $clearing-active-images-height: 85%;
+// $clearing-active-img-height: 85%;
 // $clearing-carousel-height: 120px;
 // $clearing-carousel-thumb-width: 120px;
 // $clearing-carousel-thumb-active-border: 1px solid rgb(255,255,255);
