--- a/Salabytest/app/assets/stylesheets/rle/rle.css
+++ b/Salabytest/app/assets/stylesheets/rle/rle.css
@@ -15,8 +15,6 @@
     cursor: pointer;
     overflow: none !important;
 }
-
-
 .menuHeader {
     width: 100%;
     height: 25px;
@@ -49,26 +47,20 @@
 
     -webkit-transform: scale(1.1, 1.1);
     /* Chrome, Safari, Opera */
-
-
 }
 #mainMenu {
     margin-top: 40px;
 }
-
-
-#backArrow{
+#backArrow {
     position: absolute;
     margin-top: 10px;
     width: 50px;
     right: 20px;
 }
-
-
 /*----------Hovedmeny SLUTT!!-----------*/
 
 body {
-    background: url("../img/hinduisme/hinduismebak.jpg") no-repeat;
+    background: url("/assets/barn/hinduisme/hinduismebak.jpg") no-repeat;
     background-attachment: fixed;
     background-color: white;
     background-size: cover;
@@ -99,8 +91,6 @@ body {
 
     -webkit-transform: scale(1.1, 1.1);
     /* Chrome, Safari, Opera */
-
-
 }
 .fag img {
     max-width: 300px;
@@ -133,11 +123,10 @@ body {
 
     opacity: 0.7;
 }
-
 #footerMid li a {
     color: white;
 }
-#footerMid li{
+#footerMid li {
     float: left;
     margin: 5px;
     list-style: none;
@@ -174,7 +163,7 @@ body {
 .barnehage {
     /*display: none;*/
 }
-#test{
+#test {
     margin-bottom: 216px;
 }
 /*HINDUISME*/
@@ -191,7 +180,6 @@ body {
 .top-bar-section ul {
     margin-top: 0px;
     height: 100% !important;
-
 }
 .top-bar-section ul li a {
     color: black;
@@ -256,8 +244,7 @@ body {
         right: 20px;
         bottom: 20px;
     }
-
-    #backArrow{
+    #backArrow {
         position: absolute;
         margin-top: 10px;
         width: 80px;
@@ -272,21 +259,16 @@ body {
         bottom: 30px;
     }
 }
-
-
 @media only screen and (min-width: 40.063em) {
-.top-bar-section li:not(.has-form) a:not(.button) {
-line-height: 52px;
+    .top-bar-section li:not(.has-form) a:not(.button) {
+        line-height: 52px;
+    }
 }
-}
-
 @media only screen and (min-width: 40.063em) {
-.contain-to-grid .top-bar {
-max-width: 69.5rem;
-
-}}
-
+    .contain-to-grid .top-bar {
+        max-width: 69.5rem;
+    }
+}
 .contain-to-grid {
     background-color: #f2f2f2;
 }
-
