--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -7,8 +7,8 @@
   <title>Forside Barn</title>
   <link rel="stylesheet" href="css/foundation.css" />
   <link rel="stylesheet" href="css/styleVoksen.css" />
-  <link rel="stylesheet" href="../css/headerStyle.css" />
-  <link rel="stylesheet" href="../css//footer.css" />
+  <link rel="stylesheet" href="assets/static_pages/info.css.scss" />
+  <link rel="stylesheet" href="../css/footer.css" />
 
 
   <script src="js/vendor/modernizr.js"></script>
