lagt til css og bakgrunnsbilde på RLE siden

--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forside Barn</title>
-  <link rel="stylesheet" href="/assets/rle/rle.css" />
+  <link rel="stylesheet" href="/assets/barn/religion.css" />
   <style>
       body {
-          background: url("img/rlebakgrunn.jpg") no-repeat;
+          background: url("/assets/barn/rlebakgrunn.jpg") no-repeat;
           background-attachment: fixed;
           background-position: center bottom;
           background-size: cover;
