--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foundation | Welcome</title>
-  <link rel="stylesheet" href="assets/index/introStyle.css" />
+  <link rel="stylesheet" href="/assets/index/intro.css" />
 </head>
 
 <body>
