--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forside Barn</title>
   <link rel="stylesheet" href="css/foundation.css" />
-  <link rel="stylesheet" href="css/styleVoksen.css" />
-  <link rel="stylesheet" href="/assets/static_pages/info.css.scss" />
-  <link rel="stylesheet" href="../css/footer.css" />
+  <link rel="stylesheet" href="/assets/stylesheets/shared/footer.css" />
+  <link rel="stylesheet" href="/assets/stylesheets/shared/header.css" />
+  <link rel="stylesheet" href="/assets/stylesheets/voksen/voksen_shared.css" />
+  <link rel="stylesheet" href="/assets/stylesheets/voksen/kompetanse.css" />
 
 
   <script src="js/vendor/modernizr.js"></script>
@@ -106,7 +107,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>TV-AKSJONEN 2014</h3>
-          <img class="articleImg" src="img/nyheter/tv-aksjonenNRK.png" />
+          <img class="articleImg" src="/assets/images/voksen/nyheter/historienOmEuropa.png" />
           <p>Dato for årets TV-aksjon er 19. oktober,
             og Salaby tilbyr også i år egne skolesider
             knyttet til tema for aksjonen.</p>
@@ -119,7 +120,7 @@
       <div class="large-6 small-12 columns">
         <article>
           <h3>OVERSKRIFT 3</h3>
-          <img class="articleImg" src="img/RLE/budd.png" />
+          <img class="articleImg" src="/assets/images/voksen/nyheter/alfProysen.png" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
         </article>
       </div>
