--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -5,15 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forside Barn</title>
-  <link rel="stylesheet" href="css/foundation.css" />
-  <link rel="stylesheet" href="/assets/stylesheets/shared/footer.css" />
-  <link rel="stylesheet" href="/assets/stylesheets/shared/header.css" />
-  <link rel="stylesheet" href="/assets/stylesheets/voksen/voksen_shared.css" />
-  <link rel="stylesheet" href="/assets/stylesheets/voksen/kompetanse.css" />
+  <link rel="stylesheet" href="/assets/shared/footer.css" />
+  <link rel="stylesheet" href="/assets/shared/header.css" />
+  <link rel="stylesheet" href="/assets/voksen/voksen_shared.css" />
+  <link rel="stylesheet" href="/assets/voksen/kompetanse.css" />
 
 
-  <script src="js/vendor/modernizr.js"></script>
-  <script src="../Barn/js/menuHeadScript.js"></script>
+
 </head>
 
 <body>
@@ -21,7 +19,7 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+        <img id="siteLogo" src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png">
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
@@ -52,7 +50,7 @@
     <div class="large-12 columns">
       <aside id="promoBanner">
         <div class="large-8 small-12 columns">
-          <img src="img/nyheter/historienOmEuropa.png">
+          <img src="/assets/voksen/nyheter/historienOmEuropa.png">
         </div>
         <div class="large-4 small-12 columns">
           <div id="promobannerTextBox">
@@ -81,7 +79,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>ALF PRØYSEN</h3>
-          <img class="articleImg" src="img/nyheter/alfProysen.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/alfProysen.png" />
           <p>Alf Prøysen ville fylt 100 år i 2014, og i
             anledning jubileet tilbyr vi egne temasider om
             den folkekjære visesangeren og forfatteren.</p>
@@ -92,7 +90,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>INNHOLD PÅ ENGELSK</h3>
-          <img class="articleImg" src="img/nyheter/innholdPaaEngelsk.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/innholdPaaEngelsk.png" />
           <ul>
             <li>- Nye kapitler til fortellingen 'Dad missing!'</li>
             <li>- Nivådelte oppgaver og tester til alle kapitler</li>
@@ -107,7 +105,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>TV-AKSJONEN 2014</h3>
-          <img class="articleImg" src="/assets/images/voksen/nyheter/historienOmEuropa.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/tv-aksjonenNRK.png" />
           <p>Dato for årets TV-aksjon er 19. oktober,
             og Salaby tilbyr også i år egne skolesider
             knyttet til tema for aksjonen.</p>
@@ -120,7 +118,7 @@
       <div class="large-6 small-12 columns">
         <article>
           <h3>OVERSKRIFT 3</h3>
-          <img class="articleImg" src="/assets/images/voksen/nyheter/alfProysen.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
         </article>
       </div>
@@ -129,7 +127,7 @@
       <div class="large-6 small-12 columns">
         <article>
           <h3>OVERSKRIFT 3</h3>
-          <img class="articleImg" src="img/RLE/budd.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
         </article>
       </div>
@@ -141,7 +139,7 @@
 <!-- salaby logo -->
 <footer id="footer" class="large-12 columns">
   <div id="footerLogo" class="large-4 columns">
-    <img src="img/logos/salaby_logo_enkel_grå.png">
+    <img src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png">
   </div>
   <!-- lenker i midten -->
   <div id="footerMid" class="large-6 columns">
