lenker på introside
endret noen lenker på introside

--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -15,12 +15,12 @@
   <div class="row">
     <div class="small-12 columns">
       <div class="overlay">
-        <a href="Voksen/voksenForside">Til voksensiden</a>
+        <%= link_to "Til voksensiden", static_pages_info_forside_path %> 
       </div>
     </div>
     <div class="small-12 columns">
-      <a href="Voksen/voksenForside">
-        <img src="assets/index/adultSection.jpg"></a>
+        <img src="assets/index/adultSection.jpg">
+        <%= link_to "Til voksensiden", static_pages_info_forside_path %>
     </div>
   </div>
 </div>
@@ -37,8 +37,12 @@
       <label>Innlogging
         <input id="userField" type="text" placeholder="Brukernavn" />
         <input id="passField" type="password" placeholder="Passord" />
-        <input id="loginBtn" type="button" class="button expand" value="Logg inn"><div class="small-12 small-12 medium-12 columns">
-        <a class="synlig" href="Barn/barnForside">Alternativ link til barneforside.</a></div>
+        <input id="loginBtn" type="button" class="button expand" value="Logg inn">
+        <div class="small-12 small-12 medium-12 columns">
+        <div class="synlig">
+        <%= link_to "Alternativ link til barneforside.", static_pages_barn_forside_path %>
+        </div>
+        </div>
       </label>
     </div>
   </div>
