header er utstedet til eget dokument¨

--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -1,30 +1,31 @@
-<p>Header</p>
+<!--MENU-->
+<div class="fixed">
+  <nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+      <li class="name">
+        <a href="../index.html">
+          <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+        </a>
+      </li>
+      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+      </li>
+    </ul>
 
-<div id="mainHeader">
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="large-8 small-4 columns">
-        <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
-      </div>
-      <div class="large-4 small-8 columns">
-        <div class="menuHeader">
-          <ul>
-            <li><a href="../Voksen/voksenForside">Lærer/foreldre siden</a>
-            </li>
-            <li><a href="#">Min side</a>
-            </li>
-            <li>
-
-              <% if logged_in?%>
-                  <%= link_to "Logg ut", logout_path, method: "delete"%>
-                  <%else%>
-                  <%= link_to "Logg inn", login_path %>
-                  <%end%>
-
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li><a href="../Voksen/voksenForside.html">Lærer/foreldre siden</a>
+        </li>
+        <li><a href="#">Min side</a>
+        </li>
+        <li><% if logged_in?%>
+              <%= link_to "Logg ut", logout_path, method: "delete"%>
+          <%else%>
+              <%= link_to "Logg inn", login_path %>
+          <%end%>
+        </li>
+      </ul>
+    </section>
+  </nav>
 </div>
