--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -13,33 +13,9 @@
 </head>
 
 <body>
-<!--MENU-->
-<div class="fixed">
-  <nav class="top-bar" data-topbar role="navigation">
-    <ul class="title-area">
-      <li class="name">
-        <a href="../index.html">
-          <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
-        </a>
-      </li>
-      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
-      </li>
-    </ul>
 
-    <section class="top-bar-section">
-      <!-- Right Nav Section -->
-      <ul class="right">
-        <li><a href="../Voksen/voksenForside.html">Lærer/foreldre siden</a>
-        </li>
-        <li><a href="#">Min side</a>
-        </li>
-        <li><a href="#">Logg ut</a>
-        </li>
-      </ul>
-    </section>
-  </nav>
-</div>
+<%= render 'shared/page_header' %>
+
 <div id="wrapper">
   <!--!!!!!!!!!!!!!!MENY!!!!!!!!!!!!!!-->
   <div class="row menu">
