--- a/Salabytest/app/views/static_pages/info/kompetanse.html.erb
+++ b/Salabytest/app/views/static_pages/info/kompetanse.html.erb
@@ -519,9 +519,9 @@
 
 <!-- FOOTER -->
 <!-- salaby logo -->
-<footer  id="footer" class="large-12 columns">
+<footer id="footer" class="large-12 columns">
   <div id="footerLogo" class="large-4 columns">
-    <img src="img/logos/salaby_logo_enkel_grå.png">
+    <img src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png">
   </div>
   <!-- lenker i midten -->
   <div id="footerMid" class="large-6 columns">
@@ -537,10 +537,10 @@
   <!-- sosiale medier -->
   <div id="socialLinks" class="large-2 columns">
     <a href="https://www.facebook.com/salaby">
-      <img src="img/social/facebook_logo.png">
+      <img src="/assets/voksen/social/Facebook_logo.png">
     </a>
     <a href="https://www.youtube.com/user/SalabyGyldendal">
-      <img src="img/social/youtube_logo.png">
+      <img src="/assets/voksen/social/youtube_logo.png">
     </a>
   </div>
 </footer>
@@ -549,7 +549,7 @@
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 <script src="js/menuHeadScript.js"></script>
-<script src="js/showSections.js"></script>
+<script src="/assets/voksen/showSections.js"></script>
 <script>
     $(document).foundation();
 </script>
