--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -15,6 +15,7 @@ body {
     }
     #wrapper {
         padding-top: 5em;
+        min-height: 100%;
     }
     #kompetanse {
         min-height: 100%;
