stykke opp kode
la header og footer i egene html dokumenter

--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forside Barn</title>
-  <link rel="stylesheet" href="css/foundation.css" />
-  <link rel="stylesheet" href="css/forsideStyle.css" />
-  <link rel="stylesheet" href="css/mobileStyle.css" />
+  <link rel="stylesheet" href="/assets/shared/footer.css"/>
+  <link rel="stylesheet" href="/assets/shared/header.css" />
+  <link rel="stylesheet" href="/assets/barn/forside_barn.css" />
+  <link rel="stylesheet" href="/assets/barn/mobile.css" />
 
-  <script src="js/vendor/modernizr.js"></script>
 </head>
 
 <body>
@@ -349,41 +349,11 @@
   </div>
   <!--!!!!!!!!!!!!!!!!MFL FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
-
+<%= render 'shared/page_footer' %>
 
 
 </div>
 <!--!!!!!!!!!!!!!!!!! MAIN SLUTT!!!!!!!!!!!!!!!!!!!!-->
-
-<!--!!!!!!!!!!!!!!!!!!!!!!FOOTER!!!!!!!!!!!!!!!!!!!!!!!-->
-<!-- salaby logo -->
-<footer id="footer" class="large-12 columns">
-  <div id="footerLogo" class="large-4 columns">
-    <img src="img/logos/salaby_logo_enkel_grå.png" alt="footer logo">
-  </div>
-  <!-- lenker i midten -->
-  <div id="footerMid" class="large-6 columns">
-    <ul>
-      <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-      </li>
-      <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-      </li>
-      <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-      </li>
-    </ul>
-  </div>
-  <!-- sosiale medier -->
-  <div id="socialLinks" class="large-2 columns">
-    <a href="https://www.facebook.com/salaby">
-      <img src="img/social/facebook_logo.png" alt="facebook logo">
-    </a>
-    <a href="https://www.youtube.com/user/SalabyGyldendal">
-      <img src="img/social/youtube_logo.png" alt="youtube logo">
-    </a>
-  </div>
-  <a href="#0" class="cd-top">top</a>
-</footer>
-<!--!!!!!!!!!!!!!!!!!!FOOTER SLUTT!!!!!!!!!!!!!!!!!!!!!!-->
 
 <script src="js/showDivsScript.js"></script>
 <script src="js/showDivsMobilScript.js"></script>
