--- a/Salabytest/app/views/shared/_page_footer.html.erb
+++ b/Salabytest/app/views/shared/_page_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- salaby logo -->
 <footer id="footer" class="large-12 columns">
   <div id="footerLogo" class="large-4 columns">
-    <img src="img/logos/salaby_logo_enkel_grå.png" alt="footer logo">
+    <img src="/assets/voksen/logos/salaby_logo_r%C3%B8d_uten_no.png" alt="footer logo">
   </div>
   <!-- lenker i midten -->
   <div id="footerMid" class="large-6 columns">
@@ -17,11 +17,12 @@
   <!-- sosiale medier -->
   <div id="socialLinks" class="large-2 columns">
     <a href="https://www.facebook.com/salaby">
-      <img src="img/social/facebook_logo.png" alt="facebook logo">
+      <img src="/assets/voksen/social/Facebook_logo.png" alt="facebook logo">
     </a>
     <a href="https://www.youtube.com/user/SalabyGyldendal">
-      <img src="img/social/youtube_logo.png" alt="youtube logo">
+      <img src="/assets/voksen/social/youtube_logo.png" alt="youtube logo">
     </a>
   </div>
   <a href="#0" class="cd-top">top</a>
 </footer>
+
