--- a/Salabytest/app/views/static_pages/info/omKanalS.html.erb
+++ b/Salabytest/app/views/static_pages/info/omKanalS.html.erb
@@ -74,34 +74,8 @@
 
     </div>
   </div>
-  <!-- FOOTER -->
-  <!-- salaby logo -->
-  <footer id="footer" class="large-12 columns">
-    <div id="footerLogo" class="large-4 columns">
-      <img src="img/logos/salaby_logo_enkel_grå.png">
-    </div>
-    <!-- lenker i midten -->
-    <div id="footerMid" class="large-6 columns">
-      <ul>
-        <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-        </li>
-        <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-        </li>
-        <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-        </li>
-      </ul>
-    </div>
-    <!-- sosiale medier -->
-    <div id="socialLinks" class="large-2 columns">
-      <a href="https://www.facebook.com/salaby">
-        <img src="img/social/facebook_logo.png">
-      </a>
-      <a href="https://www.youtube.com/user/SalabyGyldendal">
-        <img src="img/social/youtube_logo.png">
-      </a>
-    </div>
-  </footer>
-  <!-- FOOTER SLUTT -->
+
+    <%= render 'shared/page_footer' %>
 
   <script src="js/vendor/jquery.js"></script>
   <script src="js/foundation.min.js"></script>
