--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -111,6 +111,8 @@
   </div>
 </div>
 
+<%= render 'shared/page_footer' %>
+    
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 <script src="js/menuHeadScript.js"></script>
