--- a/Salabytest/app/views/static_pages/info/kompetanse.html.erb
+++ b/Salabytest/app/views/static_pages/info/kompetanse.html.erb
@@ -492,34 +492,8 @@
   </section>
 </div>
 
-<!-- FOOTER -->
-<!-- salaby logo -->
-<footer id="footer" class="large-12 columns">
-  <div id="footerLogo" class="large-4 columns">
-    <img src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png">
-  </div>
-  <!-- lenker i midten -->
-  <div id="footerMid" class="large-6 columns">
-    <ul>
-      <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-      </li>
-      <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-      </li>
-      <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-      </li>
-    </ul>
-  </div>
-  <!-- sosiale medier -->
-  <div id="socialLinks" class="large-2 columns">
-    <a href="https://www.facebook.com/salaby">
-      <img src="/assets/voksen/social/Facebook_logo.png">
-    </a>
-    <a href="https://www.youtube.com/user/SalabyGyldendal">
-      <img src="/assets/voksen/social/youtube_logo.png">
-    </a>
-  </div>
-</footer>
-<!-- FOOTER SLUTT -->
+
+    <%= render 'shared/page_footer' %>
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
