--- a/Salabytest/app/views/shared/_page_footer.html.erb
+++ b/Salabytest/app/views/shared/_page_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- salaby logo -->
 <footer id="footer" class="large-12 columns">
   <div id="footerLogo" class="large-4 columns">
-    <img src="/assets/voksen/logos/salaby_logo_r%C3%B8d_uten_no.png" alt="footer logo">
+    <img src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png" alt="footer logo">
   </div>
   <!-- lenker i midten -->
   <div id="footerMid" class="large-6 columns">
