--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -23,22 +23,22 @@
       <div class="row">
         <div class="large-3 medium-6 columns barnehageButton">
           <div class="menu-option">
-            <img src="img/barnehage.png" alt="barnehage meny">
+            <img src="/assets/barn/menyer/barnehage.png" alt="barnehage meny">
           </div>
         </div>
         <div class="large-3 medium-6 columns skoleveienButton">
           <div class="menu-option">
-            <img src="img/Skoleveien.png" alt="skoleveien meny">
+            <img src="/assets/barn/menyer/skoleveien.png" alt="skoleveien meny">
           </div>
         </div>
         <div class="large-3 medium-6 columns kanalSButton">
           <div class="menu-option">
-            <img src="img/kanalS.png" alt="kanalS meny">
+            <img src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
           </div>
         </div>
         <div class="large-3 medium-6 columns MFLButton">
           <div class="menu-option">
-            <img src="img/MFL.png" alt="MFL meny">
+            <img src="/assets/barn/menyer/MFL.png" alt="MFL meny">
           </div>
         </div>
       </div>
@@ -52,33 +52,33 @@
   <!-- mobil meny -->
   <div id="barnehageButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="img/barnehage.png" alt="barnehage meny">
+      <img src="/assets/barn/menyer/barnehage.png" alt="barnehage meny">
     </div>
   </div>
   <div class="row barnehage">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/barnehage/biblioteket.png" alt="bibliotek fag">
+        <img src="/assets/barn/barnehage/biblioteket.png" alt="bibliotek fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/barnehage/billehagen.png" alt="billehagen fag">
+        <img src="/assets/barn/barnehage/billehagen.png" alt="billehagen fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/barnehage/musikkfilm.png" alt="mysikkfilm fag">
+        <img src="/assets/barn/barnehage/musikkfilm.png" alt="mysikkfilm fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/barnehage/TilDeVoksene.png" alt="til de voksene fag">
+        <img src="/assets/barn/barnehage/TilDeVoksene.png" alt="til de voksene fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/barnehage/trampoline.png" alt="trampoline fag">
+        <img src="/assets/barn/barnehage/trampoline.png" alt="trampoline fag">
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@
   <!-- mobil meny -->
   <div id="skoleveienButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="img/Skoleveien.png" alt="skoleveien meny">
+      <img src="/assets/barn/menyer/Skoleveien.png" alt="skoleveien meny">
     </div>
   </div>
   <div class="row menu" id="skoleveienMenu">
@@ -96,22 +96,22 @@
       <div class="row">
         <div id="forste" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="img/undermenySkoleVeien/forste.png" alt="1-2 klasse meny">
+            <img src="/assets/barn/menyer/forste.png" alt="1-2 klasse meny">
           </div>
         </div>
         <div id="andre" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="img/undermenySkoleVeien/andre.png" alt="3-4 klasse meny">
+            <img src="/assets/barn/menyer/andre.png" alt="3-4 klasse meny">
           </div>
         </div>
         <div id="morsmaal" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="img/undermenySkoleVeien/morsmal.png" alt="morsmål meny">
+            <img src="/assets/barn/menyer/morsmaal.png" alt="morsmål meny">
           </div>
         </div>
         <div id="skolestart" class="large-3 medium-6 small-6 columns">
           <div class="menu-option">
-            <img src="img/undermenySkoleVeien/skolestart.png" alt="skolestart meny">
+            <img src="/assets/barn/menyer/skolestart.png" alt="skolestart meny">
           </div>
         </div>
       </div>
@@ -123,22 +123,22 @@
   <div class="row skolestart">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/skolestart/Engelsk.png" alt="engelsk fag">
+        <img src="/assets/barn/skoleveien/skolestart/engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/skolestart/matte.png" alt="matte fag">
+        <img src="/assets/barn/skoleveien/skolestart/matte.png" alt="matte fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/skolestart/naturfag.png" alt="naturfag">
+        <img src="/assets/barn/skoleveien/skolestart/naturfag.png" alt="naturfag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/skolestart/norsk.png" alt="norsk fag">
+        <img src="/assets/barn/skoleveien/skolestart/norsk.png" alt="norsk fag">
       </div>
     </div>
   </div>
