--- a/Salabytest/app/views/shared/_page_footer.html.erb
+++ b/Salabytest/app/views/shared/_page_footer.html.erb
@@ -1,4 +1,6 @@
 <!-- salaby logo -->
+<link rel="stylesheet" href="/assets/shared/footer.css" />
+
 <footer id="footer" class="large-12 columns">
   <div id="footerLogo" class="large-4 columns">
     <img src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png" alt="footer logo">
