--- a/Salabytest/app/views/static_pages/info/omKanalS.html.erb
+++ b/Salabytest/app/views/static_pages/info/omKanalS.html.erb
@@ -52,16 +52,7 @@
   <div class="row">
     <div id="articleOmrade">
       <div class="large-2 small-12 columns">
-        <ul class="side-nav">
-          <li><a  href="omSalaby">Om Salaby</a>
-          </li>
-          <li><a href="omSkolevein">Om Skoleveien 1-2 Trinn</a>
-          </li>
-          <li><a href="omByparken">Om Byparken 3-5 Trinn</a>
-          </li>
-          <li><a class="active" href="omKanalS">Om KanalS 5-7 Trinn</a>
-          </li>
-        </ul>
+            <%= render 'shared/page_sidebar_info.html.erb' %>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL-->
       <div class="large-10 small-12 columns">
