--- a/Salabytest/app/assets/stylesheets/shared/footer.css
+++ b/Salabytest/app/assets/stylesheets/shared/footer.css
@@ -11,18 +11,8 @@
 #footerLogo img{
     width: 200px;
     margin: 15px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
 }
-#footerLogo img:hover{
-    transform: scale(1.1,1.1);
-    -ms-transform: scale(1.1,1.1); /* IE 9 */
-    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
-    opacity: 0.7;
-}
+
 
 #footerMid{
     margin-top: 40px;
@@ -59,7 +49,8 @@
 #footer li a {
     display: block;
     margin-left: 10px;
-    color: #333;
+    color: white;
+    transition: 0.2s all ease-in-out 0s;
 }
 #footer li a:hover {
     color: #007095;
