endring på filstier
endret på filstiene til flere bilder på barnesiden

--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -4,7 +4,7 @@
     <ul class="title-area">
       <li class="name">
         <a href="../index.html">
-          <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+          <img id="siteLogo" src="/assets/logos/salaby_logo_enkel_rod.png" alt="logo">
         </a>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
