--- a/Salabytest/app/views/shared/_page_footer.html.erb
+++ b/Salabytest/app/views/shared/_page_footer.html.erb
@@ -3,7 +3,7 @@
 
 <footer id="footer" class="large-12 columns">
   <div id="footerLogo" class="large-4 columns">
-    <img src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png" alt="footer logo">
+    <img src="/assets/logos/salaby_logo_enkel_graa.png" alt="footer logo">
   </div>
   <!-- lenker i midten -->
   <div id="footerMid" class="large-6 columns">
