--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -52,7 +52,7 @@
       <!--KODE BLOKK FOR HVER ARTIKKEL-->
       <div class="large-4 small-12 columns">
         <article>
-          <h3>ALF PRØYSEN</h3>
+          <h3><% current_user %></h3>
           <img class="articleImg" src="/assets/voksen/nyheter/alfProysen.png" />
           <p>Alf Prøysen ville fylt 100 år i 2014, og i
             anledning jubileet tilbyr vi egne temasider om
