--- a/Salabytest/app/views/shared/_page_header_info.html.erb
+++ b/Salabytest/app/views/shared/_page_header_info.html.erb
@@ -2,7 +2,7 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <img id="siteLogo" src="/assets/voksen/logos/salaby_logo_enkel_r%C3%B8d.png">
+        <img id="siteLogo" src="/assets/logos/salaby_logo_enkel_rod.png">
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
