--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -4,6 +4,10 @@ body {
     background-color: #ccc;
 }
 
+#hover1 li {
+    display: inline-block;
+}
+
 
 @media only screen and (min-width: 64.063em) {
     /***********************************CONSTRUCTORS**************************************/
